force-app/main/default/objects/Internal_results__c/Internal_results__c.object-meta.xml
<CustomObject>
    <label>Internal results</label>
    <nameField>
        <label>Internal results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>