force-app/main/default/objects/Internal_results__c/fields/Candidate_Roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Roll_Number__c</fullName>
    <formula>Candidate__r.Candidate_Roll_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Roll Number</label>
    <type>Text</type>
</CustomField>