force-app/main/default/objects/Internal_results__c/fields/Course_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Details__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Details</label>
    <referenceTo>Course_Details__c</referenceTo>
    <relationshipLabel>Internal results</relationshipLabel>
    <relationshipName>Internal_results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>